# rbfnn

./: README.md  data (another copy).csv  data (copy).csv  data.csv  data_old.csv  net_init.cpp  rbfnn_f_tutor  rbfnn_f_tutor.cpp  trained_model.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/klqr_ws/lib/klqr_ws/: klqr_node  printing_node
install/klqr_ws/share/klqr_ws/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/klqr_ws/share/klqr_ws/cmake/: klqr_wsConfig.cmake
log/: latest_build
src/: klqr_node.cpp  printing_node.cpp
working_with_error/: data.csv  data_gather.h  data_processing_ip.cpp  rbfnn_f_tutor  rbfnn_f_tutor.cpp  training.cpp  training.h
working_with_four_features/: CMakeLists.txt  data_gather.cpp  data_processing_ip  data_processing_ip_fn.cpp  data_processing_output.cpp  data_test.csv  package.xml  rbfnn_dlib_test.cpp  rbfnn_f_tutor.cpp  training.cpp  training.h
working_with_with_different_weights/: data_processing_ip_fn.cpp  data_processing_ip_fn.h  data_processing_output.h  net_init.h
